# simplegc

./: .gitignore  CMakeLists.txt  README.md
include/: gc.h
src/: CMakeLists.txt  gc.c  main.c
test/: gctest.c  gctest.h  gctest.rb  gctestgen.rb  test.t
